--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body{
-	margin:0;
+   margin: auto;
+   width: 80%;
 	padding:0;
 	background:#fff;
 	font-family: 'Open Sans', sans-serif;
@@ -9,4 +10,26 @@ body{
     width: 130px;
     padding: 0px;
     margin-left: 0px;
-    margin-top: 0px;6T  
+    margin-top: 0px;
+ }
+
+ .content{
+    margin-top: 150px;
+    margin-left: 40px;
+    margin-bottom: 40px;
+    font-size: 20px;
+    font-weight: 100;
+   
+ }
+
+ .app{
+   margin-left: 40px;
+   margin-bottom: 30px;
+   padding-left: 30px;
+ }
+ .form{
+   margin-left: 40px;
+   margin-bottom: 30px;
+   padding-left: 30px;
+   line-height: 1.5em;
+ }
