Javascript validation added

--- a/main.css
+++ b/main.css
@@ -7,8 +7,8 @@ body{
  }
 
  .logo {
-    width: 130px;
-    padding: 0px;
+    width: 150px;
+    padding-left: 1px;
     margin-left: 0px;
     margin-top: 0px;
  }
